<resources>
    <string name="app_name">Book Online Caterers</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_account">Account</string>
    <string name="auth_failed">Authentication failed, check your email and password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Price</string>
    <string name="item_name">Item Name</string>
    <string name="user_name">User Name</string>
    <string name="order_id">Order Id</string>
    <string name="total_amount">Total Amount</string>
    <string name="address">Address</string>
    <string name="order_title">order title</string>
    <string name="message">Currently Online Payment Mode Service is not Available.You can make payment by Cash Or Cheque both services are Available. Sorry for inconvience</string>
    <string name="edit_profile">View Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_sign_up">Sign In/Sign Up</string>
    <string name="description">description</string>
    <string name="sohan_caterers">Book Online Caterers</string>
    <string name="_1234567890">8560808809</string>
    <string name="sohancaterers_gmail_com">Sohancaterers@gmail.com</string>
    <string name="password_minimum_6_characters">Password (Minimum 6 characters)</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account">Have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
