<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    android:id="@+id/order_card_view"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    >
  <LinearLayout
      android:padding="12dp"
      android:background="@drawable/blackbg"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
            <ImageView

                android:src="@drawable/checkmark"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:scaleType="centerInside" />

      <TextView
                android:gravity="center"
                android:id="@+id/event_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/order_title"
                android:textSize="16sp"
                android:textColor="@color/white"
                />
  </LinearLayout>
      <TextView

          android:layout_marginTop="10dp"
          android:textColor="@color/white"
          android:id="@+id/order_name"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/user_name"
          android:textSize="16sp"
          android:textStyle="bold"
          />
       <TextView
           android:layout_marginTop="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/event_date"
           android:text="date"
           android:textColor="@color/white"/>
      <TextView
          android:layout_marginTop="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/event_time"
          android:text="time"
          android:textColor="@color/white"/>
      <TextView
          android:layout_marginTop="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/total_member"
          android:text="Total Member"
          android:textColor="@color/white"/>
      <TextView
          android:layout_marginTop="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/per_member_price"
          android:text="Per Member"
          android:textColor="@color/white"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:id="@+id/order_total_amount"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/total_amount"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    />

        <TextView

            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:id="@+id/venue_address"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="@color/white"
            />


  </LinearLayout>

</androidx.cardview.widget.CardView>